--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ test_vid.MP4
 DataCollection/extracted_frames/
 DataCollection/*.MP4
 DataCollection/pinch_frames
+DataCollection/extracted_frames/*.png
+.venv/
